force-app/main/default/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - No Contact Needed</fullName>
        </values>
        <values>
            <fullName>Closed - Unable to Contact</fullName>
        </values>
        <values>
            <fullName>Customer Follow Up</fullName>
        </values>
        <values>
            <fullName>Document Invalid</fullName>
        </values>
        <values>
            <fullName>Document Successfully Verified</fullName>
        </values>
        <values>
            <fullName>Document Uploaded Successfully</fullName>
        </values>
        <values>
            <fullName>Email Sent</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Incident Triage</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Return Call Requested</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Formula__c</fullName>
        <formula>( Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_already_taken_to_resolve__c</fullName>
        <description>US # 122484,The ability to replicate the conditions under which an error occurred to reproduce the issue this field identifies the steps taken to resolve.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actions already taken to resolve</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affected_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US #122484 -In MVP we are unable to append users records as affectees this field will be where a support agent can attatch the URL of the affected Users profile to a case.</description>
        <label>Affected User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anonymization_Tool_Log__c</fullName>
        <description>ADO #118561 - Data Privacy Request
Output of the anonymization tool should be pasted here for posterity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Anonymization Tool Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_Error_Messages__c</fullName>
        <description>US #169200 - The ability to replicate the conditions under which an error occurred to reproduce the issue this field identifies these exact steps.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Applicable Error Messages</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Aware__c</fullName>
        <description>ADO #122484 - This field is used for capturing the URL of  the customer while Case Creation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Aware</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Assignment_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Assignment Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_time__c</fullName>
        <description>This Field is calculating an average of the case open date and case closed date</description>
        <formula>IF (IsClosed,ClosedDate - CreatedDate,Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ticket_Browser</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Browsers__c</fullName>
        <description>US #122484 , The ability to replicate the conditions under which an error occurred to reproduce the issue this picklist identifies the browser being used when the issue occurred.</description>
        <label>Browsers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internet Explorer</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>EDGE</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Assignee_Email_Update__c</fullName>
        <description>ADO #168729. Field to Update for CS Staff Email Update</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CS Assignee Email Update</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_SkipProfiles__c</fullName>
        <description>ADO #147629 - (Page Layouts for Case Management and Validation Rules)
Used to find out Student/Caretaker Community Profile</description>
        <formula>IF(OR($Profile.Name = &apos;Caretaker Community User&apos;,$Profile.Name = &apos;Student Community User&apos;),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS_SkipProfiles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseCommentsUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Email Checks</description>
        <label>CaseCommentsUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseQueueName__c</fullName>
        <description>US #168730 - When the OwnerId is blank on the Ticket, this field captures the Queue Name otherwise this field captures the User&apos;s FirstName and LastName.</description>
        <formula>IF(
ISBLANK(Owner:User.Id),
Owner:Queue.QueueName,
Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName
)</formula>
        <label>CaseQueueName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comments_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The US #217816 used for checking Case comments updated by the Care taker community user in the Portal.</description>
        <label>Case Comments Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Contact_Record_Type__c</fullName>
        <description>This field captures the respective Contact&apos;s Record Type that is associated with the Case.</description>
        <formula>Contact.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Initiator__c</fullName>
        <description>This picklist field indicates that,who is taking initiation on the Case behalf of Student Community User.</description>
        <label>Case Initiator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Caretaker</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Record_Id__c</fullName>
        <description>US #149145  - This field is used for capturing the case record Id after Case creation.</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CasesCreatedByMe__c</fullName>
        <description>ADO #122485 - (Support Agent can view a case (query))
Used to find out the Cases Created by Me</description>
        <formula>$User.Id = CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CasesCreatedByMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cases_Created_by_Me_SF_Staff__c</fullName>
        <formula>$User.Id = Contact.Commuity_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases Created by Me_SF_Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cases_Created_by_Me_Staff__c</fullName>
        <formula>$User.Id = CreatedById  || $User.ContactId =  ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cases Created by Me_Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Customer support</fullName>
                </value>
                <value>
                    <fullName>Tech support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Issue_Type_SSTF__c</fullName>
        <label>Chat IssueType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Issue_Type__c</fullName>
        <description>Used for Post Enrollment Chat.</description>
        <label>Chat Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Contact Information Change</fullName>
                </value>
                <value>
                    <fullName>Grade Level Placement</fullName>
                </value>
                <value>
                    <fullName>Enrollment Assistance</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Formula__c</fullName>
        <formula>((Contact.FirstName ) + &quot; &quot; + (Contact.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <description>US #122484, The ability to replicate the conditions under which an error occurred to reproduce the issue this picklist identifies the ID of the Course when the issue was encountered.</description>
        <label>Course ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>US #122484, The ability to replicate the conditions under which an error occurred to reproduce the issue this field is to identify the course name where this occurred.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Course__c</fullName>
        <description>US #122484,This field is to capture a students existing course in the event a course change is submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Course</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Grade__c</fullName>
        <description>US #122484 .This Picklist allows for identification of a students existing grade when submitting a grade change request.</description>
        <label>Current Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>k</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Privacy_OBL_Systems__c</fullName>
        <description>ADO #118561 / 121562 - Checklist of systems to check for CCPA data privacy data disclosure / DNS requests.</description>
        <label>Data Privacy - OBL Systems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Data_Privacy_OBL_Systems</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_privacy_Zip_File_URL__c</fullName>
        <description>ADO #149145</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Data privacy - Zip File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_Irreversible_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the consumer requests deletion of their personal information in the initial request, they acknowledge that said operation is permanent and cannot be reversed. We must separately re-confirm after identify verification that they still want to delete. That is not the purpose of this checkbox.</description>
        <inlineHelpText>If the consumer requests deletion of their personal information in the initial request, they acknowledge that said operation is permanent and cannot be reversed. We must separately re-confirm after identify verification that they still want to delete.</inlineHelpText>
        <label>Deletion Irreversible Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device_Model__c</fullName>
        <description>US #122484 -This is a picklist Value STS agents can use to indicate the type of equipment either school provided or personal. This helps with recreating the steps that lead to a given issue.</description>
        <label>Device Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ticket_Device_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <description>US #122484 - This is a picklist Value STS agents can use to indicate the type of equipment either school provided or personal. This helps with recreating the steps that lead to a given issue.</description>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ticket_Device_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Upload_Link__c</fullName>
        <description>Displays a link you can provide to the requester to upload a photo ID if they open the case over the phone or didn&apos;t already upload one via the CCPA web form.</description>
        <formula>IF(NOT(ISBLANK(CaseNumber)), &quot;https://pearson.tfaforms.net/324?tfa_1461=&quot; &amp; CaseNumber, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Upload Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents_Type__c</fullName>
        <label>Documents Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proof of Residency</fullName>
                </value>
                <value>
                    <fullName>504 plan</fullName>
                </value>
                <value>
                    <fullName>Custody Order</fullName>
                </value>
                <value>
                    <fullName>Family Income Information</fullName>
                </value>
                <value>
                    <fullName>High School Home School Credit Form</fullName>
                </value>
                <value>
                    <fullName>Home Language Survey</fullName>
                </value>
                <value>
                    <fullName>Home School Prior Academic History Form</fullName>
                </value>
                <value>
                    <fullName>IEP Exit Documentation</fullName>
                </value>
                <value>
                    <fullName>Immunization Records</fullName>
                </value>
                <value>
                    <fullName>Individualized Education Program (IEP)</fullName>
                </value>
                <value>
                    <fullName>Master Agreement</fullName>
                </value>
                <value>
                    <fullName>Report of Health Examination for School Entry</fullName>
                </value>
                <value>
                    <fullName>School Handbook Section</fullName>
                </value>
                <value>
                    <fullName>State Eligibility</fullName>
                </value>
                <value>
                    <fullName>State Test Scores</fullName>
                </value>
                <value>
                    <fullName>Proof of Age</fullName>
                </value>
                <value>
                    <fullName>IEP Document</fullName>
                </value>
                <value>
                    <fullName>Get Prepared for Enrollment</fullName>
                </value>
                <value>
                    <fullName>Academic Records</fullName>
                </value>
                <value>
                    <fullName>Proof of Health Examination</fullName>
                </value>
                <value>
                    <fullName>504 Special Education doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain_ID__c</fullName>
        <description>US #122484 - The field indicates that ID of the Domain.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Domain ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>ADO #118561 - Data Privacy Request
Date by which we are legally obligated to have completed the request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date by which we are legally obligated to have completed the request.  Under CCPA, we are permitted one 45-day extension if we notify the customer within the first 45 days that we need an extension.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Search_Link__c</fullName>
        <description>If the Platform is Connexus v2, and the contact has a Home Email, opens a link to the Connexus v2 email search.</description>
        <formula>IF(AND(ISPICKVAL(Platform__c, &quot;Connexus v2&quot;), NOT(ISBLANK(Contact.Email))), &quot;https://www.connexus.com/webuser/contactInformationLookup.aspx?email=&quot; &amp; Contact.Email, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only appears If the Platform is Connexus v2 and the contact has a Home Email.</inlineHelpText>
        <label>Email Search Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Equipment_Info__c</fullName>
        <description>US #122484 - Escalated Live Lesson issues require the Application Management Team to replicate the issue in order to do that type of equipment being used must be passed when escalating.</description>
        <label>Equipment Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School Provided</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Ticket_ID__c</fullName>
        <description>US #181666 - This field acts as an external id to uniquely identify the ticket.  This &quot;External Ticket ID&quot; text field acts as an optional for Escalation Record Type Only.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Ticket ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Ticket_Link__c</fullName>
        <description>This field is used to track the external link to the same Ticket in the ADO system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Ticket Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Ticket_Location__c</fullName>
        <description>US #181666 - This field indicates the location of the Ticket. This picklist field is associated with the &quot;Escalation&quot; Record Type only.</description>
        <label>External Ticket Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Azure Dev Ops</fullName>
                </value>
                <value>
                    <fullName>Issue Aware</fullName>
                </value>
                <value>
                    <fullName>Service Now</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FEC_ES_RT_Issuetypes__c</fullName>
        <formula>IF(
OR(
AND(OR(
ISPICKVAL(Type , &quot;General Questions&quot;),
ISPICKVAL(Type , &quot;Contact Information Change&quot;),
ISPICKVAL(Type , &quot;Enrollment Assistance&quot;),
ISPICKVAL(Type , &quot;Grade Level Placement&quot;)),(ISPICKVAL(Origin ,&quot;Customer Support Community&quot;))),
AND(OR(
ISPICKVAL(Type , &quot;General Questions&quot;),
ISPICKVAL(Type , &quot;Contact Information Change&quot;),
ISPICKVAL(Type , &quot;Enrollment Assistance&quot;)),(ISPICKVAL(Origin ,&quot;Enrollment Community&quot;)))),
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FEC ES RT Issuetypes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Case_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Case Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_URL__c</fullName>
        <description>US #122484 - The Triage Team requires the ability to replicate the conditions under which an error occurred to reproduce the issue this field is to enter the URL of the location of the issue it occurred.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Course URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_Uploaded_Info_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when you have uploaded the Information Report, redacted if applicable.</description>
        <label>Have Uploaded Info Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Category__c</fullName>
        <label>Inquiry Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment Questions</fullName>
                </value>
                <value>
                    <fullName>School Specific Questions</fullName>
                </value>
                <value>
                    <fullName>Live Event Questions</fullName>
                </value>
                <value>
                    <fullName>Virtual Info Session Questions</fullName>
                </value>
                <value>
                    <fullName>Contact a Parent</fullName>
                </value>
                <value>
                    <fullName>Contact a Teacher</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Course Placement</fullName>
                </value>
                <value>
                    <fullName>Curriculum Questions</fullName>
                </value>
                <value>
                    <fullName>Special Education Questions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet_connection__c</fullName>
        <description>US #122484 -Escalated Live Lesson issues require the Application Management Team to replicate the issue in order to do that the Internet Service Provider and/or speed of that service must be passed when escalating.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Internet connection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Reason__c</fullName>
        <label>Invalid Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uploaded document is invalid</fullName>
                </value>
                <value>
                    <fullName>Incorrect document uploaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lesson_Assessment_Name__c</fullName>
        <description>US # 122484 - The ability to replicate the conditions under which an error occurred to reproduce the issue this picklist identifies the Lesson or Assessment name where the issue occurred.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lesson/Assessment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lesson_ID__c</fullName>
        <description>US #122484 -It indicates that ID of the  Lesson.while Case creation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lesson ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <description>US# 147629 - Which is capturing the Mailing Address from  Contact.</description>
        <formula>if(ISBLANK(Contact.MailingStreet) , &quot;&quot; , Contact.MailingStreet &amp; &quot;, &quot;) &amp;
if(ISBLANK(Contact.MailingCity) , &quot;&quot; , Contact.MailingCity &amp; &quot;, &quot;) &amp;
if(ISBLANK(Contact.MailingState) , &quot;&quot; , Contact.MailingState &amp; &quot; &quot;) &amp;
if(ISBLANK(Contact.MailingPostalCode) , &quot;&quot; , Contact.MailingPostalCode) &amp;
If(ISBLANK(Contact.MailingCountry ) , &quot;&quot; , &quot;, &quot; &amp; Contact.MailingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Review__c</fullName>
        <formula>IF(OR(CreatedBy.Profile.Name = &apos;School Principal&apos;,CreatedBy.Profile.Name = &apos;School Counselor&apos;,CreatedBy.Profile.Name = &apos;School Staff Administrator&apos;,CreatedBy.Profile.Name = &apos;School Special Education Director&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Must_Be_Redacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Location references in information report must be redacted due to legal situation.</description>
        <label>Information Report Must Be Redacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Comment_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US # 217816  used for checking case comments updated by the Caretaker Community User and added into the all Ticket list view.</description>
        <label>New Comment Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <description>US #168731 - This is a picklist field used for the selection of respective operating system while case creation.</description>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ticket_Operating_System</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Aware__c</fullName>
        <description>US #122484 -The field  indicates that Order Aware of the Case creation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Aware</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Owner_Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCx_Username__c</fullName>
        <description>ADO #130478 - (Support Agent Comment and Case Administration)
Used to find out Contact&apos;s User Fed Id</description>
        <formula>Contact.Commuity_User__r.FederationIdentifier</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCx Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Search_Link__c</fullName>
        <formula>IF(AND(ISPICKVAL(Platform__c, &quot;Connexus v2&quot;), NOT(ISBLANK(SuppliedPhone))), &quot;https://www.connexus.com/webuser/contactInformationLookup.aspx?phone=&quot; &amp; SuppliedPhone, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Search Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
</CustomObject>